--- a/_config.yml
+++ b/_config.yml
@@ -39,9 +39,9 @@ collections:
     title: Welcome to yedol's blog ! # Needed for Siteleaf
     output: true
     description:
-    <p>"This is just a blog for OSS about music set top box
+    "This is just a blog for OSS about music set top box
     if you want to know OSS, PBL and who is yedol find out more please click -> [about yedol](/about/)" # The post list page content
-
+    
 # 6. Jekyll collections settings
 defaults:
   -
