--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,7 @@ collections:
   posts:
     title: Welcome to yedol's blog ! # Needed for Siteleaf
     output: true
-    description:
-    "This is just a blog for OSS about music set top box if you want to know OSS, PBL and who is yedol find out more please click -> [about yedol](/about/)" # The post list page content
+    description: "This is just a blog for OSS about music set top box if you want to know OSS, PBL and who is yedol find out more please click -> [about yedol](/about/)" # The post list page content
     
 # 6. Jekyll collections settings
 defaults:
